ADDED favicon and associated HTML header logic.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,85 +1,102 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <meta name="viewport" content="width=device-width">
-    
     <meta charset="UTF-8">
     <meta name="description" content="Community market place for goods and services in your neighborhood.">
     <meta name="keywords" content="
-ad posting sites, 
-ads, 
-advertising, 
-auto classifieds, 
-auto dealers, 
-auto, 
-business, 
-buy, 
-campus, 
-capture ad, 
-cars, 
-classified ads, 
-classified video ads, 
-classified, 
-classifieds, 
-community, 
-connechub, 
-easy, 
-ebay, 
-email, 
-employment, 
-events, 
-film, 
-free ads, 
-free advertising, 
-free classified ads online, 
-free classified posting sites, 
-free classified sites list, 
-free classified websites list, 
-free classified websites, 
-free classified, 
-free classifieds, 
-free online classifieds, 
-free, 
-hard to find, 
-housing, 
-images, 
-internet advertising, 
-jobs, 
-list, 
-listings, 
-local, 
-marketing, 
-on film, 
-online classifieds, 
-online, 
-personals, 
-pets, 
-place free classified ads, 
-post free ads, 
-post free classified ads, 
-post, 
-posts, 
-real-estate, 
-real, 
-realestate, 
-record, 
-sale, 
-search, 
-sell, 
-services, 
-tickets, 
-to post free ad, 
-to post free ads in classifieds, 
-trade, 
-unboxing, 
-video ads, 
-video, 
-visual ad, 
-visual ads, 
-youtube, 
+ad posting sites,
+ads,
+advertising,
+auto classifieds,
+auto dealers,
+auto,
+business,
+buy,
+campus,
+capture ad,
+cars,
+classified ads,
+classified video ads,
+classified,
+classifieds,
+community,
+connechub,
+easy,
+ebay,
+email,
+employment,
+events,
+film,
+free ads,
+free advertising,
+free classified ads online,
+free classified posting sites,
+free classified sites list,
+free classified websites list,
+free classified websites,
+free classified,
+free classifieds,
+free online classifieds,
+free,
+hard to find,
+housing,
+images,
+internet advertising,
+jobs,
+list,
+listings,
+local,
+marketing,
+on film,
+online classifieds,
+online,
+personals,
+pets,
+place free classified ads,
+post free ads,
+post free classified ads,
+post,
+posts,
+real-estate,
+real,
+realestate,
+record,
+sale,
+search,
+sell,
+services,
+tickets,
+to post free ad,
+to post free ads in classifieds,
+trade,
+unboxing,
+video ads,
+video,
+visual ad,
+visual ads,
+youtube,
 ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
