--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,9 @@
+<%
+# sources:
+# https://stackoverflow.com/questions/5113248/devise-update-user-without-password
+# https://github.com/heartcombo/devise/wiki/How-To:-Allow-users-to-edit-their-account-without-providing-a-password
+%>
+
 <div class="col-md-8 col-md-offset-2">
     <div class="row">
         <div class="panel panel-default">
@@ -6,7 +12,17 @@
             </div>
 
             <div class="panel-body">
-                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+                <%= simple_form_for(
+                    @listing,
+                    as: user,
+                    url: :user,
+                    html: {
+                        authenticity_token: true,
+                        method: :put,
+                        multipart: true,
+                        class: 'form-horizontal ',
+                        presence: true
+                }) do |f| %>
                     <%= devise_error_messages! %>
 
                     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -33,12 +49,12 @@
                     <br>
 
                     <div class="input-group">
-                        <span class="input-group-addon">Bio</span>
+                        <span class="input-group-addon">Biography</span>
                         <%= f.text_area :bio, class: "form-control" %>
                     </div>
                     <br>
 
-                    <div class = "small-heading", style="color:red">(We need your current password to allow password changes.)</div>
+                    <div class = "small-heading", style="color:red">We will need your current password whento allow a password change.</div>
                     <br>
 
                     <div class="input-group">
