--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,18 +12,19 @@
             </div>
 
             <div class="panel-body">
-                <%= simple_form_for(
-                    @listing,
-                    as: user,
-                    url: :user,
+                <%= form_for(
+                    resource,
+                    # as: resource_name,
+                    # url: registration_path(resource_name),
+                    url: '/user/update_resource',
                     html: {
-                        authenticity_token: true,
                         method: :put,
-                        multipart: true,
-                        class: 'form-horizontal ',
-                        presence: true
+                        multipart: true
                 }) do |f| %>
+
                     <%= devise_error_messages! %>
+
+                    <%= f.hidden_field :id %>
 
                     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
                         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -32,7 +33,8 @@
 
                     <div class="input-group">
                         <span class="input-group-addon">Username</span>
-                        <%= f.label :username %><br>
+                        <%#= f.input_field :username, class: "form-control", disabled: true %>
+                        <%= f.label :username, class: "form-control", disabled: true %>
                     </div>
                     <br>
 
@@ -54,7 +56,7 @@
                     </div>
                     <br>
 
-                    <div class = "small-heading", style="color:red">We will need your current password whento allow a password change.</div>
+                    <div class = "small-heading", style="color:red">* We will need your current password whento allow a password change.</div>
                     <br>
 
                     <div class="input-group">
@@ -75,8 +77,13 @@
                     </div>
                     <br>
 
-                    <div class="form-group">
-                        <%= f.submit "Update", class: "btn btn-success", id: "profile_submit" %>
+                    <div class="input-group">
+                        <div class="actions">
+                            <%= f.submit "Update Profile",
+                                class: "btn btn-success",
+                                id: "profile_submit"
+                            %>
+                        </div>
                     </div>
                 <% end %>
         </div>
@@ -84,14 +91,3 @@
 </div>
 <br>
 
-<%= render "processing_overlay" %>
-
-<script>
-$(function () {
-    $('#profile_submit').on('click', function(){
-        if (document.getElementById('edit_user').checkValidity() == true){
-            $("#overlay").toggle()
-        }
-    })
-});
-</script>
