--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -213,7 +213,7 @@ These Terms, your access to and use of the THE HUB  and Materials shall be gover
 <b> H. Survival.</b> (Disclaimer of Warranties), (Limitation of Liability), (Indemnity), (Arbitration), (Governing Law; Venue), this Section (Miscellaneous), and any other term that, by its nature, should survive, will survive any termination or expiration of these Terms.
  <br> <br>
 Users complying with prior written licenses may access THE HUB thereby until authorization is terminated. Otherwise, this is the exclusive and entire agreement between us. If a TOC term is unenforceable, other terms are unaffected. If TOC translations conflict with the English version, English controls. See Privacy Policy for how we collect, use and share data. If you feel content infringes your rights see <%= link_to 'Privacy Policy', privacy_path %>.</p>
-    If you have questions or Comments on these <strong>TOC</strong> click <%= link_to 'About Us', about_path %>..
+    If you have questions or Comments on these <strong>TOC</strong> click <%= link_to 'About Us', aboutus_path %>..
     <br>
     <div align="right"><a href="#">Top of the Page</a></div>
     </div>
