--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -40,6 +40,9 @@
     <hr>
 
     <div class="text-muted">
+        <% if @listing.condition? %>
+            <small>Condition: <%= "#{@listing.condition}" %></small>
+        <% end %>
         <small>&nbsp; &nbsp; &nbsp;<i class= "fa fa-eye" aria-hidden="true"></i></small>
         <small><%= "#{@listing.impressionist_count}" %> views</small>
         <small>&nbsp; &nbsp; &nbsp;<i class="fa fa-calendar" aria-hidden="true"></i></small>
