ADDED condition to Listing edit VW.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -71,6 +71,20 @@
                     <br>
 
                     <div class="input-group">
+                        <div class="input-group-addon">Condition</div>
+                        <div class="form-control">
+                            <%= f.select :category_id,
+                                Condition.all.map {|f| [f.value, f.id]},
+                                {
+                                    include_blank: true
+                                },
+                                required: true
+                            %>
+                        </div>
+                    </div>
+                    <br>
+
+                    <div class="input-group">
                         <div class="input-group-addon">Posting Title</div>
                         <%= f.text_field :title,
                             class: "form-control",
