ADDED | to user profile Listing text links. WORKING on condition text displaying on user Listing.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -40,8 +40,8 @@
     <hr>
 
     <div class="text-muted">
-        <% if @listing.condition? %>
-            <small>Condition: <%= "#{@listing.condition}" %></small>
+        <% if @listing.condition_id? %>
+            <small>Condition: <%= "#{@listing.condition_id}" %></small>
         <% end %>
         <small>&nbsp; &nbsp; &nbsp;<i class= "fa fa-eye" aria-hidden="true"></i></small>
         <small><%= "#{@listing.impressionist_count}" %> views</small>
