--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -150,7 +150,7 @@
 
                     <div class="input-group">
                         <div class="actions">
-                            <%= f.submit "Submit Listing",
+                            <%= f.submit "Edit Listing",
                                 class: "btn btn-success",
                                 id: "listings_submit"
                             %>
