--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,7 +50,11 @@
                             <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span>&nbsp;|&nbsp;
                             <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
                             <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>&nbsp;|&nbsp;
+                            <% if listing.sold! %>
                             <span class="description"><%= link_to 'SOLD', "/listings/sold/#{listing.id}" %></span>
+                            <% else %>
+                            <span class="description">IS SOLD</span>
+                            <% end %>
                             <% end %>
                           </div>
                       </div>
