--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,11 +49,11 @@
                             <% if listing.user == current_user %>
                             <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span>&nbsp;|&nbsp;
                             <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-                            <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>&nbsp;|&nbsp;
+                            <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>
                             <% if listing.sold === nil %>
-                            <span class="description"><%= link_to 'SOLD', "/listings/sold/#{listing.id}" %></span>
+                            <br /><span class="description"><%= link_to 'Mark as Sold', "/listings/sold/#{listing.id}" %></span>
                             <% else %>
-                            <span class="description">IS SOLD</span>
+                            <br /><span class="description">IS SOLD</span>
                             <% end %>
                             <% end %>
                           </div>
