ADDED CSS to wrap Listing card title.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1190,3 +1190,8 @@ li.landing_page {
 .cat_item_count {
   color: #4cae4c
 }
+
+/* Word wrap Listing card long titles */
+div.name > b > a {
+  word-wrap: break-word;
+}
