UPDATED Listing VW edit subcategory DDL selecting. FIXED Listing VW new/edit Price field allowing less than 1.00 USD value.

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -68,8 +68,8 @@
                             required: true,
                             type: "regexp",
                             maxlength: "256",
-                            pattern: "[0-9A-Za-z\s]+",
-                            placeholder: "exp. Text only Listing Title"
+                            pattern: "[0-9.]+",
+                            placeholder: "exp. Price in US dollar and cents."
                         %>
                     </div>
                     <br>
