--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,7 @@
                     resource,
                     # as: resource_name,
                     # url: registration_path(resource_name),
-                    url: '/users/update_resource',
+                    url: '/users/update',
                     html: {
                         method: :put,
                         multipart: true
@@ -33,7 +33,7 @@
 
                     <div class="input-group">
                         <span class="input-group-addon">Username</span>
-                        <%= f.text_area :username, class: "form-control", disabled: true %>
+                        <%= f.text_field :username, class: "form-control", disabled: true %>
                     </div>
                     <br>
 
@@ -55,14 +55,12 @@
                     </div>
                     <br>
 
-                    <div class = "small-heading", style="color:red">* We will need your current password whento allow a password change.</div>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">Current Password</span>
-                        <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+                    <div class = "small-heading", style="color:red">Optional: <br />
+                    - The following two fields must match to change password. <br />
+                    - You will be prompted to log in with your new password after the change.
                     </div>
                     <br>
+
 
                     <div class="input-group">
                         <span class="input-group-addon">New Password</span>
