--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,14 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require 'masonry/transitions'
  *= require 'masonry/basic'
  *= require 'masonry/centered'
  *= require 'masonry/fluid'
  *= require 'masonry/gutters'
  *= require 'masonry/infinitescroll'
  *= require 'masonry/right-to-left'
+ *= require 'masonry/transitions'
  *= require video-js
+ *= require_self
  */
 
 @import "bootstrap-sprockets";
