Revert "REMOVED duplicate videojs Rails GAM. Re-configured existing VideoJS GEM changes per documentation. UPDATED seed.rb to now NOT truncate tables, database.sql will DROP tables."
This reverts commit ae01047056aaa74a3ce5812999f251662e3a1060.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,17 +6,16 @@
         <p>
             <div>
                 <%= videojs_rails sources: {
-                        avi: @presigned_media_url,
-                        mkv: @presigned_media_url,
-                        mov: @presigned_media_url,
-                        mp4: @presigned_media_url
-                    },
-                    controls: true,
-                    autoplay: false,
-                    preload: true,
-                    width:"450",
-                    height:"450" do%>
-                <% end %>
+                    avi: @presigned_media_url,
+                    mkv: @presigned_media_url,
+                    mov: @presigned_media_url,
+                    mp4: @presigned_media_url
+                },
+                controls: true,
+                autoplay: false,
+                preload: true,
+                width:"450",
+                height:"450" do%><% end %>
             </div>
             <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
             <br><br><br>
