UPDATED VideoJs players to use .mpd extensions. UPDATED Listing CNTL to save media w/ extension of .mpd

--- a/app/views/partials/_item_card.erb
+++ b/app/views/partials/_item_card.erb
@@ -1,6 +1,6 @@
 <%= link_to (
     videojs_rails
-        sources: {m3u8: listing.presigned_media_url},
+        sources: {mpd: listing.presigned_media_url},
         controls: false,
         setup: "{}",
         class: 'img-responsive'),
