--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,13 +6,13 @@
         <p>
             <div>
                 <%= videojs_rails
-                    sources: {m3u8: @presigned_media_url},
+                    sources: {mpd: @presigned_media_url},
                     controls: true,
                     autoplay: false,
                     preload: true,
                     width:"450",
-                    height:"450" do%
-                ><% end %>
+                    height:"450" do%>
+                <% end %>
             </div>
             <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
             <br><br><br>
