--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,9 +10,10 @@
                     controls: true,
                     autoplay: false,
                     preload: true,
+                    setup: "{}",
                     width:"450",
-                    height:"450" do%>
-                <% end %>
+                    height:"450"
+                do%><% end %>
             </div>
             <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
             <br><br><br>
