Trying to get the VideoJS player to now syntax error.

--- a/app/views/partials/_item_card.erb
+++ b/app/views/partials/_item_card.erb
@@ -1,7 +1,5 @@
 <%= link_to (
-    videojs_rails sources: {
-            mpd: listing.presigned_media_url
-        },
+    videojs_rails sources: {mpd: listing.presigned_media_url},
         controls: true,
         autoplay: false,
         preload: true,
