--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,16 +5,13 @@
     <div class="grid_6">
         <p>
             <div>
-                <%= videojs_rails sources: {
-                        mpd: @presigned_media_url
-                    },
+                <%= videojs_rails sources: {mpd: @presigned_media_url},
                     controls: true,
                     autoplay: false,
                     preload: true,
-                    setup: "{}",
                     width:"450",
-                    height:"450"
-                do%><% end %>
+                    height:"450" do%>
+                <% end %>
             </div>
             <small><b>Posted By: &nbsp;</b><%= @listing.user.email %></small>
             <br><br><br>
