--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,7 +5,7 @@
     <div class="grid_6">
         <p>
             <div>
-                <%= videojs_rails sources: {mpd: @presigned_media_url},
+                <%= videojs_rails sources: {m3u8: @presigned_media_url},
                     controls: true,
                     autoplay: false,
                     preload: true,
