UPDATED ./help/auto_sync.sh. REMOVED rails_videojs GEM, replaced with JS/CSS VideoJS implimentation. UPDATED layout/application.html.erb to load VideoJs assets. REMOVED listin_link() from listing/show_ due to not rendering.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,9 +98,15 @@ youtube,
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
+
     <%= javascript_include_tag 'application' %>
+    <script src="https://unpkg.com/video.js/dist/video.js"></script>
+    <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
+    <script src="https://unpkg.com/videojs-contrib-dash/dist/videojs-dash.min.js"></script>
+    
     <%= csrf_meta_tags %>
-    <%= render "partials/google_analytics" %>
+    <%= render "partials/google_analytics" %>   
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
