--- a/app/views/partials/_item_card.erb
+++ b/app/views/partials/_item_card.erb
@@ -1,5 +1,5 @@
 <%= link_to (
-    videojs_rails sources: {m3u8: listing.presigned_media_url},
+    videojs_rails sources: {mp4: listing.presigned_media_url},
         controls: true,
         autoplay: false,
         preload: true,
