REPLACED env STAGE with env NAME where appropriate. REMOVED media filename extension in Listing CNTL update_upload() as the ext. will be added when needed.

--- a/app/views/devise/registrations/_processing_overlay.erb
+++ b/app/views/devise/registrations/_processing_overlay.erb
@@ -1,5 +1,5 @@
 <div id="overlay">
-    <%= image_tag("loading_spinner.gif", :alt => ENV['STAGE']) %>
+    <%= image_tag("loading_spinner.gif", :alt => ENV['NAME']) %>
     <p>Please wait while we update your profile.</p>
     <p>The page will refresh once complete.</p>
 </div>
