--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
                       <div class="panel panel-default pin-item">
                           <div class="panel-body">
                             <%= link_to image_tag(
-                              listing.presigned_media_url,
+                              "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] +".amazonaws.com/" + listing.media_file_name + "-00001.png",
                               class: "img-responsive",
                               onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
                             ), listing %>
@@ -47,14 +47,14 @@
                             <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
                           <hr>
                             <% if listing.user == current_user %>
-                            <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span>&nbsp;|&nbsp;
-                            <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-                            <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>
-                            <% if listing.sold === nil %>
-                            <br /><span class="description"><%= link_to 'Mark as Sold', "/listings/sold/#{listing.id}" %></span>
-                            <% else %>
-                            <br /><span class="description">IS SOLD</span>
-                            <% end %>
+                              <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span>&nbsp;|&nbsp;
+                              <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+                              <span class="description"><%= link_to 'Change Video', "/listings/upload/#{listing.id}" %></span>
+                              <% if listing.sold === nil %>
+                                <br /><span class="description"><%= link_to 'Mark as Sold', "/listings/sold/#{listing.id}" %></span>
+                              <% else %>
+                                <br /><span class="description">IS SOLD</span>
+                              <% end %>
                             <% end %>
                           </div>
                       </div>
