ADDED server side validation to signup username. Added Cypress UAT test for the same. FORMATTED a couple VWs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -187,6 +187,7 @@ youtube,
                         <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
                           <li><%= link_to 'Career With Us', career_path %></a></li>
                           <li><%= link_to 'About Us', about_path %></li>
+                          <li><%= link_to 'Newsletter', newsletter_path %></li>
                           <li><%= link_to 'How It Works', '/howitworks/index' %></li>
                           <li><%= link_to 'Prices', '/prices/index' %></li>
                         </ul>
