--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -78,10 +78,7 @@
                         <div class="input-group-addon">Condition</div>
                         <div class="form-control">
                             <%= f.select :condition_id,
-                                Condition.all.map {|f| [f.value, f.id]},
-                                {
-                                    include_blank: true
-                                }
+                                Condition.all.map {|f| [f.value, f.id]}
                             %>
                         </div>
                     </div>
