UPDATED UAT testing and application as needed. Of note: added screenshot comparison tools to Cypress. ADDED 1.1.9 UAT test cases. UPDATED ./db/sql/databases.sql. UPDATEDS TESTING.md. UPDATED lots of other for 1.1.9 deployment.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
                                     <% if listing.sold === nil %>
                                     <br /><span class="description"><%= link_to 'Mark as Sold', "/listings/sold/#{listing.id}" %></span>
                                     <% else %>
-                                    <br /><span class="description"><%= link_to 'Relist item', "/listings/unsold/#{listing.id}" %></span>
+                                    <br /><span class="description"><%= link_to 'Relist Item', "/listings/unsold/#{listing.id}" %></span>
                                     <% end %>
                                     <% end %>
                                 </div>
