--- a/app/views/partials/_google_analytics.erb
+++ b/app/views/partials/_google_analytics.erb
@@ -1,16 +1,9 @@
-<%# source: https://richonrails.com/articles/adding-google-analytics-to-your-rails-app-the-right-way %>
-<%# source: https://guides.rubyonrails.org/layouts_and_rendering.html#using-partials %>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src='https://www.googletagmanager.com/gtag/js?id=<%= ENV["GOOGLEANALYTICS"] %>'></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '<%= ENV["GOOGLEANALYTICS"] %>']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+  gtag('config', '<%= ENV["GOOGLEANALYTICS"] %>');
 </script>
